data/derived/fa15/progs/unify/prog1793.ml.out
Characters 84-85:
  (b+1,bigAdd((mulByDigit x l2)@clone(0 b) c)) in
                                      ^
Error: This expression has type int
       This is not a function; it cannot be applied.
